--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>Josue Cavazos Jr.</h1>
   <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="https://www.himgs.com/imagenes/hello/social/hello-fb-logo.png" />
 </body>
  
 </html>
