Changed to my portfolio in progress

--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
+<!DOCTYPE html>
 <html>
- 
-<body>
-  <h1>Josue Cavazos Jr.</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://www.himgs.com/imagenes/hello/social/hello-fb-logo.png" />
-</body>
- 
+    <head>
+        <title>Josue Cavazos Jr.</title>
+        <link href="./Resources/css/style.css" rel="stylesheet" type="text/css" />
+        <link href="./Resources/images/user.png" rel="icon"/>
+    </head>
+    <body>
+        <header>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <div>
+                <a href="https://www.linkedin.com/in/josue-cavazos-15a32823b/" target="_blank"><img src="./Resources/images/linkedin.png" /></a>
+                <a href="https://www.instagram.com/j.j.cavazos/" target="_blank"><img src="./Resources/images/instagram.png" /></a>
+            </div>
+        </header>
+        <main>
+            <img src="./Resources/images/profile pic.png" width="200rem"/>
+        </main>
+        <section>
+            <h1>Josue Cavazos Jr.</h1>
+        </section>
+        <footer>
+
+        </footer>
+    </body>
 </html>
