--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ section h1 {
             </div>
         </header>
         <main>
-            <img src="./Resources/images/profile pic.png" width="200rem"/>
+            <img src="assets/css/assets/profile pic.png" width="200rem"/>
         </main>
         <section>
             <h1>Josue Cavazos Jr.</h1>
