--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ section h1 {
             <img src="assets/css/assets/profile pic.png" width="200rem"/>
         </main>
         <section>
-            <h1>Josue Cavazos Jr. test</h1>
+            <h1>Josue Cavazos Jr.</h1>
         </section>
         <footer>
 
