--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ section h1 {
             </ul>
             <div>
                 <a href="https://www.linkedin.com/in/josue-cavazos-15a32823b/" target="_blank"><img src="./Resources/images/linkedin.png" /></a>
-                <a href="https://www.instagram.com/j.j.cavazos/" target="_blank"><img src="./Resources/images/instagram.png" /></a>
+                <a href="https://www.instagram.com/j.j.cavazos/" target="_blank"><img src="assets/css/assets/instagram.png" /></a>
             </div>
         </header>
         <main>
