--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ section h1 {
                 <li><a href="#">Contact</a></li>
             </ul>
             <div>
-                <a href="https://www.linkedin.com/in/josue-cavazos-15a32823b/" target="_blank"><img src="./Resources/images/linkedin.png" /></a>
+                <a href="https://www.linkedin.com/in/josue-cavazos-15a32823b/" target="_blank"><img src="assets/css/assets/linkedin.png" /></a>
                 <a href="https://www.instagram.com/j.j.cavazos/" target="_blank"><img src="assets/css/assets/instagram.png" /></a>
             </div>
         </header>
