--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Josue Cavazos Jr.</title>
         <link href="./Resources/css/style.css" rel="stylesheet" type="text/css" />
-        <link href="./Resources/images/user.png" rel="icon"/>
+        <link href="assets/css/assets/user.png" rel="icon"/>
     </head>
     <style>
         * {
