--- a/index.html
+++ b/index.html
@@ -2,68 +2,9 @@
 <html>
     <head>
         <title>Josue Cavazos Jr.</title>
-        <link href="./Resources/css/style.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/style.scss" rel="stylesheet" type="text/css" />
         <link href="assets/css/assets/user.png" rel="icon"/>
     </head>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            font-family: "0pen Sans", sans-serif;
-        }
-        a {
-            text-decoration: none;
-        }
-header {
-    position: fixed;
-    width: 100%;
-    height: 3rem;
-    z-index: 1;
-    border-bottom: 1px solid black;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-header li {
-    display: inline;
-    padding: 0 1rem;
-}
-header a {
-    color: black;
-}
-header a:hover {
-    text-decoration: underline;
-}
-header img {
-    height: 2rem;
-    width: auto;
-    padding: 0 0.5rem;
-    position: relative;
-}
-header div {
-    padding-right: 2rem;
-}
-main,
-footer {
-    position: relative;
-    top: 3rem;
-}
-main {
-    display: flex;
-    justify-content: center;
-}
-main img {
-    border-radius: 50%;
-    position: relative;
-    top: 2rem;
-}
-section h1 {
-    position: relative;
-    top: 6rem;
-    font-size: 3rem;
-    text-align: center;
-}
-    </style>
     <body>
         <header>
             <ul>
