--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Josue Cavazos Jr.</title>
-        <link href="assets/css/style.scss" rel="stylesheet" type="text/css" />
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/assets/user.png" rel="icon"/>
     </head>
     <body>
