--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Josue Cavazos Jr.</title>
         <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/assets/user.png" rel="icon"/>
+        <script type="module" src="PCBs/kicanvas.js"></script>
     </head>
     <body>
         <header>
@@ -23,6 +24,7 @@
         <section>
             <h1>Josue Cavazos Jr.</h1>
         </section>
+        <kicanvas-embed src="./Resources/PCBs/DCDCVoltageDoubler.kicad_sch" controls="basic"> </kicanvas-embed>
         <footer>
 
         </footer>
