--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section>
             <h1>Josue Cavazos Jr.</h1>
         </section>
-        <kicanvas-embed src="./Resources/PCBs/DCDCVoltageDoubler.kicad_sch" controls="basic"> </kicanvas-embed>
+        <kicanvas-embed src="PCBs/DCDCVoltageDoubler.kicad_sch" controls="basic"> </kicanvas-embed>
         <footer>
 
         </footer>
