--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
         <section>
             <h1>Josue Cavazos Jr.</h1>
         </section>
-        <kicanvas-embed src="PCBs/DCDCVoltageDoubler.kicad_sch" controls="basic"> </kicanvas-embed>
+        <kicanvas-embed controls="full">
+            <kicanvas-source src="PCBs/VMS/DCDCVoltageDoubler.kicad_sch"></kicanvas-source>
+            <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_sch"></kicanvas-source>
+            <kicanvas-source src="PCBs/VMS/VoltageRegulator.kicad_sch"></kicanvas-source>
+            <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_pcb"></kicanvas-source>
+        </kicanvas-embed>
         <footer>
 
         </footer>
