--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section>
             <h1>Josue Cavazos Jr.</h1>
         </section>
-        <kicanvas-embed controls="full">
+        <kicanvas-embed width="200rem" controls="full">
             <kicanvas-source src="PCBs/VMS/DCDCVoltageDoubler.kicad_sch"></kicanvas-source>
             <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_sch"></kicanvas-source>
             <kicanvas-source src="PCBs/VMS/VoltageRegulator.kicad_sch"></kicanvas-source>
