--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
         <section>
             <h1>Josue Cavazos Jr.</h1>
         </section>
-        <kicanvas-embed width="200rem" controls="full">
-            <kicanvas-source src="PCBs/VMS/DCDCVoltageDoubler.kicad_sch"></kicanvas-source>
-            <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_sch"></kicanvas-source>
-            <kicanvas-source src="PCBs/VMS/VoltageRegulator.kicad_sch"></kicanvas-source>
-            <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_pcb"></kicanvas-source>
-        </kicanvas-embed>
+        <div width="300rem">
+            <kicanvas-embed controls="full">
+                <kicanvas-source src="PCBs/VMS/DCDCVoltageDoubler.kicad_sch"></kicanvas-source>
+                <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_sch"></kicanvas-source>
+                <kicanvas-source src="PCBs/VMS/VoltageRegulator.kicad_sch"></kicanvas-source>
+                <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_pcb"></kicanvas-source>
+            </kicanvas-embed>
+        </div>
         <footer>
 
         </footer>
