--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </section>
         <p>
             <kicanvas-embed controls="full">
-                <kicanvas-source src="PCBs/VMS/DCDCVoltageDoubler.kicad_sch"></kicanvas-source>
-                <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_sch"></kicanvas-source>
-                <kicanvas-source src="PCBs/VMS/VoltageRegulator.kicad_sch"></kicanvas-source>
-                <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_pcb"></kicanvas-source>
+                <kicanvas-source src="PCBs/VMS/DCDCVoltageDoubler.kicad_sch" aria-hidden="true" hidden="" style="display: none;"></kicanvas-source>
+                <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_sch" aria-hidden="true" hidden="" style="display: none;"></kicanvas-source>
+                <kicanvas-source src="PCBs/VMS/VoltageRegulator.kicad_sch" aria-hidden="true" hidden="" style="display: none;"></kicanvas-source>
+                <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_pcb" aria-hidden="true" hidden="" style="display: none;"></kicanvas-source>
             </kicanvas-embed>
         </p>
         <footer>
