--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
         </section>
         <p>
             <kicanvas-embed controls="full">
+                <main>
+                    <kc-schematic-app sidebarcollapsed="" controls="basic">
+                        <kc-ui-split-view vertical="">
+                            <kc-ui-view class="grow">
+                                <kc-schematic-viewer loaded="">
+                                    <canvas width="806" height="570" style="background-color: rgb(19, 18, 24);"></canvas>
+                                </kc-schematic-viewer>
+                            </kc-ui-view>
+                         </kc-ui-split-view>
+                    </kc-schematic-app>
+                </main>
                 <kicanvas-source src="PCBs/VMS/DCDCVoltageDoubler.kicad_sch" aria-hidden="true" hidden="" style="display: none;"></kicanvas-source>
                 <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_sch" aria-hidden="true" hidden="" style="display: none;"></kicanvas-source>
                 <kicanvas-source src="PCBs/VMS/VoltageRegulator.kicad_sch" aria-hidden="true" hidden="" style="display: none;"></kicanvas-source>
