--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Josue Cavazos Jr.</title>
-  <link href="assets/images/user.png" rel="icon"/>
-  <link href="assets/style.css" rel="stylesheet" type="text/css"/>
-  <script type="module" src="assets/PCBs/kicanvas.js"></script>
-  <script href="assets/script.js"></script>
+  <link href="assets/css/assets/user.png" rel="icon"/>
+  <link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
+  <script type="module" src="PCBs/kicanvas.js"></script>
 </head>
 <body>
 <header>
@@ -62,14 +61,17 @@
         </div>
           <section class="pcb">
               <kicanvas-embed controls="full">
-                  <kicanvas-source src="assets/PCBs/VMS/VoltageMeasurementShieldMIII.kicad_pcb"></kicanvas-source>
+                <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_sch"></kicanvas-source>
+                <kicanvas-source src="PCBs/VMS/DCDCVoltageDoubler.kicad_sch"></kicanvas-source>
+                <kicanvas-source src="PCBs/VMS/VoltageRegulator.kicad_sch"></kicanvas-source>
+                <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_pcb"></kicanvas-source>
               </kicanvas-embed>
           </section>
       </div>
       <div class="pcbdesign" id="second">
           <section class="pcb">
               <kicanvas-embed controls="full">
-                  <kicanvas-source src="assets/PCBs/VMS/VoltageMeasurementShieldMIII.kicad_pcb"></kicanvas-source>
+                <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_pcb"></kicanvas-source>
               </kicanvas-embed>
           </section>
         <div>
@@ -118,7 +120,7 @@
         </div>
         <section class="pcb">
             <kicanvas-embed controls="full">
-                <kicanvas-source src="assets/PCBs/VMS/VoltageMeasurementShieldMIII.kicad_pcb"></kicanvas-source>
+                <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_pcb"></kicanvas-source>
             </kicanvas-embed>
         </section>
       </div>
