--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
         <div class="socials">
           <a href="https://www.linkedin.com/in/josue-cavazos-15a32823b/" target="_blank"><img src="assets/css/assets/linkedin.png"></a>
           <a href="https://www.instagram.com/j.j.cavazos/" target="_blank"><img src="assets/css/assets/instagram.png"></a>
+          <a href="https://github.com/JJ80901" target="_blank"><img src="assets/css/assets/github-sign.png"></a>
         </div>
       </div>
     </section>
