--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
         </div>
           <section class="pcb">
               <kicanvas-embed controls="full">
-                <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_sch"></kicanvas-source>
-                <kicanvas-source src="PCBs/VMS/DCDCVoltageDoubler.kicad_sch"></kicanvas-source>
-                <kicanvas-source src="PCBs/VMS/VoltageRegulator.kicad_sch"></kicanvas-source>
+                <kicanvas-source src="PCBs/SMDVMS/Voltage Measurement Shield MIV.kicad_sch"></kicanvas-source>
                 <kicanvas-source src="PCBs/VMS/VoltageMeasurementShieldMIII.kicad_pcb"></kicanvas-source>
               </kicanvas-embed>
           </section>
