--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
     </section>
     <section class="software">
-      <h1 id="2">Software</h1>
+      <h1 id="2">Coming Soon!</h1>
     </section>
   </main>
   <footer>
