Changed PCB 1 title

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h1 id="1">Hardware</h1>
       <div class="pcbdesign">
         <div>
-          <h3>Senior Design: Motion Detector Board</h3>
+          <h3>Senior Design: Motion Sensor Board</h3>
           <p>
             This board tracks motion with a 9DOF IMU and transmits the processed data via BLE. 
             This design uses 
