Changed wording and updated contact page

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   <main>
     <section class="banner">
       <div">
-        <h1>Let's get in touch!</h1>
+        <h1>Whether you have a question, a project idea, or just want to chat about robotics and embedded systems, I’d love to hear from you!</h1>
         <p>j.j.cavazos80@gmail.com</p>
         <p>(417)-669-9966</p>
         <div class="socials">
