--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <img src="assets/css/assets/profile pic.png" width="250rem"/>
     </section>
-    <section class="nav">
+  <section class="nav">
       <ul>
         <li><a href=#1>Hardware</a></li>
         <li><a href=#2>Software</a></li>
@@ -57,11 +57,11 @@
         </div>
           <section class="pcb">
               <kicanvas-embed controls="full">
-                <kicanvas-source src="PCBs/ECESD/GlideSensePro MIII.kicad_sch"></kicanvas-source>
+                <kicanvas-source src="PCBs/ECESD/GSP RevC.kicad_pcb"></kicanvas-source>
                 <kicanvas-source src="PCBs/ECESD/Power.kicad_sch"></kicanvas-source>
                 <kicanvas-source src="PCBs/ECESD/MCU.kicad_sch"></kicanvas-source>
                 <kicanvas-source src="PCBs/ECESD/Motion.kicad_sch"></kicanvas-source>
-                <kicanvas-source src="PCBs/ECESD/GlideSensePro MIII.kicad_pcb"></kicanvas-source>
+                <kicanvas-source src="PCBs/ECESD/GSP RevC.kicad_sch"></kicanvas-source>
               </kicanvas-embed>
           </section>
       </div>
