Simplified home page

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       </div>
       <img src="assets/css/assets/profile pic.png" width="250rem"/>
     </section>
-  <section class="nav">
+  <!--<section class="nav">
       <ul>
         <li><a href=#1>Hardware</a></li>
         <li><a href=#2>Software</a></li>
         <li><a href="#">Projects</a></li>
       </ul>
-    </section>
+    </section>-->
     <section class="hardware">
       <h1 id="1">Hardware</h1>
       <div class="pcbdesign">
@@ -96,8 +96,8 @@
         </div>
       </div>
     <section class="software">
-      <h1 id="2">Coming Soon!</h1>
     </section>
+    <h1 id="2">Coming Soon!</h1>
   </main>
   <footer>
     <p>JOSUE CAVAZOS JR. 2024</p>
