Changed PCB 2 description

--- a/index.html
+++ b/index.html
@@ -73,26 +73,22 @@
           </kicanvas-embed>
         </section>
         <div>
-          <h3>Arduino Voltage Measurement Shield</h3>
-          <p>
-            This is a custom voltage measurement shield 
-            I made for the arduino. This design incorperates 
-            four different circuits: a DC-DC voltage doubler, 
-            a voltage regulator with an LM317 variable linear 
-            regulator, an LM555 timer, and a voltage divider.<br><br>
-            I was having a hard time reading the voltage of a laser
-             displacement sensor I had that would output a signal 
-            of +-10V. The problem is that the arduino 
-            analog to digital converters (ADCs) could only read a range 
-            of 0-5V.<br><br>This shield will take in the voltage of a 
-            9V battery, double it to a range of 16-17V, and the LM317
-             voltage regulator will output a percise and consistant 10V.
-            This signal would then be added to the laser signal in order to 
-            only get possbly 0-20V. Then a simple voltage divider was used
-             in order to get the voltage read by the on board ADCs to a 
-            comfortable 0-5V range that would be back figured to find the 
-            initial voltage on the microcontroller.
-          </p>
+          <h3>Early Project: Arduino Measurement Shield</h3>
+          <p>This was one of my first custom circuit designs, created to solve a 
+            real-world problem while working with a <strong>±10V laser displacement sensor</strong>. Since 
+            an <strong>Arduino’s ADC can only read 0-5V</strong>, I designed this shield to properly 
+            shift and scale the sensor’s voltage output for accurate measurement.</p>
+    
+          <p>The design integrates four key circuits:</p>
+          <ul>
+              <li><strong>DC-DC voltage doubler</strong> to boost a 9V battery to ~17V</li>
+              <li><strong>LM317 voltage regulator</strong> to provide a stable 10V reference</li>
+              <li><strong>LM555 timer</strong> for signal conditioning</li>
+              <li><strong>Voltage divider</strong> to scale the adjusted signal into the Arduino’s 
+                readable range</li>
+          </ul>
+
+          <p>By <strong>offsetting the sensor’s ±10V signal to a 0-20V range and then scaling it down to 0-5V</strong>, the microcontroller could accurately determine the original sensor output. This project introduced me to <strong>power regulation, voltage manipulation, and analog signal processing</strong>, forming a strong foundation for my later embedded systems and PCB designs.</p>
         </div>
       </div>
     <section class="software">
