--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
           <h3>Senior Design: Wireless Motion Board</h3>
           <p>
             This board is designed to capture and wirelessly transmit motion data during a frisbee toss. 
-            It features an ESP32-C3-Mini-N4 microcontroller for efficient Bluetooth Low Energy (BLE) 
-            communication and an ICM-42670 high-precision 6DOF IMU for real-time motion tracking.<br><br>
+            It features an <strong>ESP32-C3-Mini-N4</strong> microcontroller for efficient <strong>Bluetooth Low Energy (BLE) 
+            communication</strong> and an <strong>ICM-42670</strong> high-precision 6DOF IMU for real-time motion tracking.<br><br>
             The primary goal of this project is to analyze key motion parameters of a frisbee throw, 
-            including initial spin rate (RPM), launch angle, stability, and acceleration. 
-            The ICM-42670 provides high-resolution accelerometer and gyroscope data, which allows for precise 
+            including <strong>initial spin rate (RPM), launch angle, stability, and acceleration</strong>. 
+            The <strong>ICM-42670</strong> provides high-resolution <strong>accelerometer and gyroscope data</strong>, which allows for precise 
             measurement of motion dynamics.<br><br>
             This design improves upon previous iterations by optimizing power efficiency and 
-            reducing form factor for future iterations. The onboard TLV62569DBVT switching regulator ensures 
+            reducing form factor for future iterations. The onboard <strong>TLV62569DBVT</strong> switching regulator ensures 
             stable power delivery to both the ESP32 and IMU. The compact size and BLE connectivity 
             make this an ideal prototype for real-world frisbee motion analysis, with potential applications 
             in sports analytics, biomechanics research, and performance optimization.
@@ -77,18 +77,18 @@
           <p>This was one of my first custom circuit designs, created to solve a 
             real-world problem while working with a <strong>±10V laser displacement sensor</strong>. Since 
             an <strong>Arduino’s ADC can only read 0-5V</strong>, I designed this shield to properly 
-            shift and scale the sensor’s voltage output for accurate measurement.</p>
-    
-          <p>The design integrates four key circuits:</p>
-          <ul>
-              <li><strong>DC-DC voltage doubler</strong> to boost a 9V battery to ~17V</li>
-              <li><strong>LM317 voltage regulator</strong> to provide a stable 10V reference</li>
-              <li><strong>LM555 timer</strong> for signal conditioning</li>
-              <li><strong>Voltage divider</strong> to scale the adjusted signal into the Arduino’s 
-                readable range</li>
-          </ul>
-
-          <p>By <strong>offsetting the sensor’s ±10V signal to a 0-20V range and then scaling it down to 0-5V</strong>, the microcontroller could accurately determine the original sensor output. This project introduced me to <strong>power regulation, voltage manipulation, and analog signal processing</strong>, forming a strong foundation for my later embedded systems and PCB designs.</p>
+            shift and scale the sensor’s voltage output for accurate measurement.<br><br>
+            The design integrates four key circuits: <strong>DC-DC voltage doubler</strong> to boost a 
+            9V battery to ~17V, <strong>LM317 voltage regulator</strong> to provide a stable 10V reference, 
+            <strong>LM555 timer</strong> for signal conditioning, <strong>Voltage divider</strong> to scale the 
+            adjusted signal into the Arduino’s 
+            readable range<br><br>
+            By <strong>offsetting the sensor’s ±10V signal to a 0-20V range and 
+            then scaling it down to 0-5V</strong>, the microcontroller could accurately determine 
+            the original sensor output. This project introduced me to <strong>power regulation, voltage 
+            manipulation, and analog signal processing</strong>, forming a strong foundation for my later 
+            embedded systems and PCB designs.
+          </p>
         </div>
       </div>
     <section class="software">
