--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             stable power delivery to both the ESP32 and IMU. The compact size and BLE connectivity 
             make this an ideal prototype for real-world frisbee motion analysis, with potential applications 
             in sports analytics, biomechanics research, and performance optimization.<br><br>
-            View the full project, including schematics and firmware, on GitHub:
-            <a href="https://github.com/JJ80901/GSP-Motion-Board-Rev.-C" target="_blank" style="display:inline-block; padding:10px 15px; background-color:#007bff; color:#fff; text-decoration:none; border-radius:5px;">GitHub Repository</a>
+            View the full project, including schematics and project files, on GitHub:
+            <a href="https://github.com/JJ80901/GSP-Motion-Board-Rev.-C" target="_blank">GitHub Repository</a>
           </p>
         </div>
           <section class="pcb">
