Chagned github wording

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             stable power delivery to both the ESP32 and IMU. The compact size and BLE connectivity 
             make this an ideal prototype for real-world frisbee motion analysis, with potential applications 
             in sports analytics, biomechanics research, and performance optimization.<br><br>
-            <p style="font-size: 0.75rem"><em>View the full project, including schematics and project files, on GitHub:
+            <p style="font-size: 0.75rem"><em>Interested in the full design and source code? Check out the GitHub repository for schematics, firmware, and PCB design files:
             <a href="https://github.com/JJ80901/GSP-Motion-Board-Rev.-C" target="_blank" style="color: rgb(201, 201, 201)">GitHub Repository</a></em></p>
           </p>
         </div>
