--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
           </p>
         </div>
       </div>
-    <section class="software">
-    </section>
+    <!--<section class="software">
+    </section>-->
     <h1 id="2">Coming Soon!</h1>
   </main>
   <footer>
