--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
       </div>
       <img src="assets/css/assets/profile pic.png" width="250rem"/>
     </section>
-    <section class="banner'">
+    <section class="banner">
       <p>Hi, I’m <strong>Josue Cavazos</strong>, a <strong>Computer Engineer</strong> with a passion for 
         <strong>embedded systems, robotics, and high-speed PCB design</strong>. My work focuses on building innovative 
         solutions that integrate <strong>hardware, firmware, and signal processing</strong></p>
