--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
       <img src="assets/css/assets/profile pic.png" width="250rem"/>
     </section>
     <section class="banner">
+      <div>
       <p>Hi, I’m <strong>Josue Cavazos</strong>, a <strong>Computer Engineer</strong> with a passion for 
         <strong>embedded systems, robotics, and high-speed PCB design</strong>. My work focuses on building innovative 
         solutions that integrate <strong>hardware, firmware, and signal processing</strong></p>
@@ -52,6 +53,7 @@
         <h2>Let's Connect!</h2>
         <p>I’m always open to discussing new projects, collaborations, or sharing ideas on embedded systems, DSP, and robotics. 
         If you’d like to connect, feel free to reach out through my <a href="contact.html"><strong>Contact Page</strong></a>.</p>
+      </div>
     </section>
   </main>
   <footer>
