--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         </ul>
     
         <h2>Let's Connect!</h2>
-        <p>I’m always open to discussing new projects, collaborations, or sharing ideas on embedded systems, DSP, and robotics. 
+        <p class="info">I’m always open to discussing new projects, collaborations, or sharing ideas on embedded systems, DSP, and robotics. 
         If you’d like to connect, feel free to reach out through my <a href="contact.html"><strong>Contact Page</strong></a>.</p>
       </div>
     </section>
