--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     measurement, and other high-accuracy signal acquisition applications</strong>.
           </p>
           <p style="font-size: 0.75rem"><em>Interested in the full design? Check out the GitHub repository for schematics and PCB design files:
-          <a href="https://github.com/JJ80901/GSP-Motion-Board-Rev.-C" target="_blank" style="color: rgb(201, 201, 201)">GitHub Repository</a></em></p>
+          <a href="https://github.com/JJ80901/Fatigue-Measurement-Board" target="_blank" style="color: rgb(201, 201, 201)">GitHub Repository</a></em></p>
         </div>
         <section class="pcb">
           <kicanvas-embed controls="full">
@@ -72,6 +72,15 @@
       </section>
       </div>
       <div class="pcbdesign" id="second">
+        <section class="pcb">
+          <kicanvas-embed controls="full">
+            <kicanvas-source src="PCBs/ECESD/GSP RevC.kicad_pcb"></kicanvas-source>
+            <kicanvas-source src="PCBs/ECESD/Power.kicad_sch"></kicanvas-source>
+            <kicanvas-source src="PCBs/ECESD/MCU.kicad_sch"></kicanvas-source>
+            <kicanvas-source src="PCBs/ECESD/Motion.kicad_sch"></kicanvas-source>
+            <kicanvas-source src="PCBs/ECESD/GSP RevC.kicad_sch"></kicanvas-source>
+          </kicanvas-embed>
+        </section>
         <div>
           <h3>Senior Design: Wireless Motion Board</h3>
           <p>
@@ -91,23 +100,8 @@
             <a href="https://github.com/JJ80901/GSP-Motion-Board-Rev.-C" target="_blank" style="color: rgb(201, 201, 201)">GitHub Repository</a></em></p>
           </p>
         </div>
-          <section class="pcb">
-              <kicanvas-embed controls="full">
-                <kicanvas-source src="PCBs/ECESD/GSP RevC.kicad_pcb"></kicanvas-source>
-                <kicanvas-source src="PCBs/ECESD/Power.kicad_sch"></kicanvas-source>
-                <kicanvas-source src="PCBs/ECESD/MCU.kicad_sch"></kicanvas-source>
-                <kicanvas-source src="PCBs/ECESD/Motion.kicad_sch"></kicanvas-source>
-                <kicanvas-source src="PCBs/ECESD/GSP RevC.kicad_sch"></kicanvas-source>
-              </kicanvas-embed>
-          </section>
       </div>
       <div class="pcbdesign">
-        <section class="pcb">
-          <kicanvas-embed controls="full">
-            <kicanvas-source src="PCBs/SMDVMS/Voltage Measurement Shield MIV.kicad_sch"></kicanvas-source>
-            <kicanvas-source src="PCBs/SMDVMS/Voltage Measurement Shield MIV.kicad_pcb"></kicanvas-source>
-          </kicanvas-embed>
-        </section>
         <div>
           <h3>Early Project: Arduino Measurement Shield</h3>
           <p>This was one of my first custom circuit designs, created to solve a 
@@ -126,6 +120,12 @@
             embedded systems and PCB designs.
           </p>
         </div>
+        <section class="pcb">
+          <kicanvas-embed controls="full">
+            <kicanvas-source src="PCBs/SMDVMS/Voltage Measurement Shield MIV.kicad_sch"></kicanvas-source>
+            <kicanvas-source src="PCBs/SMDVMS/Voltage Measurement Shield MIV.kicad_pcb"></kicanvas-source>
+          </kicanvas-embed>
+        </section>
       </div>
     <!--<section class="software">
     </section>-->
