Fixed PCB Files

--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
                   This design improves 
                   upon earlier iterations by incorporating better filtering, precise voltage scaling, and a 
                   high-resolution ADC, making it ideal for <strong>fatigue analysis, precision displacement 
-                    measurement, and other high-accuracy signal acquisition applications</strong>.
+                    measurement, and other high-accuracy signal acquisition applications</strong>.<br><br>
+                    <p style="font-size: 0.75rem"><em>Interested in the full design? Check out the GitHub repository for schematics and PCB design files:
+                      <a href="https://github.com/JJ80901/Fatigue-Measurement-Board" target="_blank" style="color: rgb(201, 201, 201)">GitHub Repository</a></em>
+                    </p>            
           </p>
-          <p style="font-size: 0.75rem"><em>Interested in the full design? Check out the GitHub repository for schematics and PCB design files:
-          <a href="https://github.com/JJ80901/Fatigue-Measurement-Board" target="_blank" style="color: rgb(201, 201, 201)">GitHub Repository</a></em></p>
         </div>
         <section class="pcb">
           <kicanvas-embed controls="full">
